--- a/notebooks/audio_to_text.ipynb
+++ b/notebooks/audio_to_text.ipynb
@@ -2,13 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from app.transcription import transcribe_audio_from_path\n",
+    "# setup_notebook_env.py\n",
+    "import sys, os\n",
+    "PROJECT_ROOT = os.path.abspath(os.path.join(os.getcwd(), \"../\"))\n",
+    "if PROJECT_ROOT not in sys.path:\n",
+    "    sys.path.insert(0, PROJECT_ROOT)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Texto: <coroutine object transcribe_audio at 0x000001F01A5DDB40>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\USUARIO\\AppData\\Local\\Temp\\ipykernel_19788\\1830023048.py:3: RuntimeWarning: coroutine 'transcribe_audio' was never awaited\n",
+      "  text = transcribe_audio(\"../data/sample_es.wav\")\n",
+      "RuntimeWarning: Enable tracemalloc to get the object allocation traceback\n"
+     ]
+    }
+   ],
+   "source": [
+    "from app.transcription import transcribe_audio\n",
     "# Prueba:\n",
-    "text = transcribe_audio_from_path(\"../data/sample.wav\")\n",
+    "text = transcribe_audio(\"../data/sample_es.wav\")\n",
     "print(\"Texto:\", text)"
    ]
   }
@@ -20,7 +50,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.4"
   }
  },
